    level. (Ming Ma via jing9)

    HADOOP-10666. Remove Copyright /d/d/d/d Apache Software Foundation from
    the source files license header. (Henry Saputra via wang)

    HADOOP-10557. FsShell -cp -pa option for preserving extended ACLs.
    (Akira Ajisaka via cnauroth)

    HADOOP-10279. Create multiplexer, a requirement for the fair queue.
    (Chris Li via Arpit Agarwal)

  OPTIMIZATIONS

  BUG FIXES 

    HADOOP-10378. Typo in help printed by hdfs dfs -help.
    (Mit Desai via suresh)

    HADOOP-10418. SaslRpcClient should not assume that remote principals are in
    the default_realm. (atm)

    HADOOP-10426. Declare CreateOpts.getOpt(..) with generic type argument,
    removes unused FileContext.getFileStatus(..) and fixes various javac
    warnings.  (szetszwo)

    HADOOP-10414. Incorrect property name for RefreshUserMappingProtocol in
    hadoop-policy.xml. (Joey Echeverria via atm)

    HADOOP-10459. distcp V2 doesn't preserve root dir's attributes when -p is
    specified. (Yongjun Zhang via atm)

    HADOOP-10462. DF#getFilesystem is not parsing the command output. 
    (Akira AJISAKA via umamahesh)

    HADOOP-10468. TestMetricsSystemImpl.testMultiThreadedPublish fails
    intermediately. (wheat9)

    HADOOP-10475. ConcurrentModificationException in
    AbstractDelegationTokenSelector.selectToken(). (jing9)

    HADOOP-10350. BUILDING.txt should mention openssl dependency required
    for hadoop-pipes (Vinayakumar B)

    HADOOP-10495. TestFileUtil fails on Windows due to bad permission
    assertions. (cnauroth)

    HADOOP-10496. Metrics system FileSink can leak file descriptor. (cnauroth)

    HADOOP-10500. TestDoAsEffectiveUser fails on JDK7 due to failure to reset
    proxy user configuration. (cnauroth)

    HADOOP-10499. Remove unused parameter from ProxyUsers.authorize().
    (Benoy Antony via cnauroth)

    HADOOP-9919. Update hadoop-metrics2.properties examples to Yarn.
    (Akira AJISAKA via suresh)
