@@ -445,6 +445,9 @@ Release 2.5.0 - UNRELEASED
     HADOOP-10279. Create multiplexer, a requirement for the fair queue.
     (Chris Li via Arpit Agarwal)
 
+    HADOOP-10659. Refactor AccessControlList to reuse utility functions
+    and to improve performance. (Benoy Antony via Arpit Agarwal)
+
   OPTIMIZATIONS
 
   BUG FIXES 
